@@ -1,5 +1,7 @@
 package it.tugaia56.obsidian.ui.fragments;
 
+import android.content.Context;
+import android.graphics.Color;
 import android.os.Bundle;
 import android.view.LayoutInflater;
 import android.view.View;
@@ -12,39 +14,66 @@ import androidx.recyclerview.widget.ConcatAdapter;
 import androidx.recyclerview.widget.LinearLayoutManager;
 import androidx.recyclerview.widget.RecyclerView;
 
-import com.google.android.material.dialog.MaterialAlertDialogBuilder;
+import org.greenrobot.eventbus.EventBus;
+import org.greenrobot.eventbus.Subscribe;
+import org.greenrobot.eventbus.ThreadMode;
 
+import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 
 import it.tugaia56.obsidian.R;
 import it.tugaia56.obsidian.ui.activity.MainActivity;
-import it.tugaia56.obsidian.ui.adapters.ListWidgetAdapter;
+import it.tugaia56.obsidian.ui.adapters.DarkShadowColorListener;
 import it.tugaia56.obsidian.ui.adapters.NavAdapter;
 import it.tugaia56.obsidian.ui.adapters.SectionTitleAdapter;
+import it.tugaia56.obsidian.ui.events.ColorSelectedEvent;
+import it.tugaia56.obsidian.ui.models.DarkShadowItem;
+import it.tugaia56.obsidian.utils.AppUtils;
+import it.tugaia56.obsidian.utils.Constants;
+import it.tugaia56.obsidian.utils.DarkShadowUtils;
 import it.tugaia56.obsidian.utils.ObsidianPrefs;
+import it.tugaia56.obsidian.utils.overlay.FabricatedUtil;
+
+import static it.tugaia56.obsidian.utils.DarkShadowUtils.PREF_PREFIX;
 
 /**
  * Clock & Date customisation sub-screen:
- *  – Clock position (left / center / right)
- *  – Clock font size
- *  – Clock extra padding
- *  – Link to Ora & Data sub-screen (date display, AM/PM, advanced format)
- *
- * Note: Custom clock color lives in StatusbarSbiFragment (alongside icon colors).
+ *  – Card: Stile Orologio → ClockStyleFragment (position / size / padding)
+ *  – Card: Stile Data → ClockOraDataFragment (date display, AM/PM, advanced format)
+ *  – Colore Icone Barra di Stato (SBI overlay) — moved here from the DST tab
+ *  – Colore Orologio (custom clock color)
  */
 public class ClockDateFragment extends Fragment {
 
-    // ── Pref keys (matching StatusbarClock hook) ───────────────────────────────
-    private static final String PREF_POSITION = "status_bar_clock";
-    private static final String PREF_SIZE     = "status_bar_clock_size";
-    private static final String PREF_PADDING  = "status_bar_clock_padding";
+    // ── Status bar icon color (SBI overlay) ────────────────────────────────────
+    private static final String SBI_OVERLAY = "SBI";
+    private static final String[] SBI_NAMES = {
+        "SBI_8",  "SBI_9",  "SBI_10",
+        "SBI_11", "SBI_12", "SBI_13",
+        "SBI_14", "SBI_15", "SBI_16", "SBI_17", "SBI_18", "SBI_19", "SBI_20",
+        "SBI_21", "SBI_22"
+    };
+
+    // ── Clock custom color (Xposed hook approach, separate from SBI overlay) ──
+    private static final String PREF_CLOCK_COLOR_ON = "status_bar_custom_clock_color";
+    private static final String PREF_CLOCK_COLOR    = "status_bar_clock_color";
 
     // ── Adapters ──────────────────────────────────────────────────────────────
-    private ListWidgetAdapter positionAdapter;
-    private ListWidgetAdapter sizeAdapter;
-    private ListWidgetAdapter paddingAdapter;
+    private final List<DarkShadowItem> sbiItems        = new ArrayList<>();
+    private final List<DarkShadowItem> clockColorItems = new ArrayList<>();
+    private DarkShadowColorListener sbiAdapter;
+    private DarkShadowColorListener clockColorAdapter;
+    private int     mPendingDialogId = -1;
+    private boolean mPendingIsClock  = false;
 
     // ── Lifecycle ─────────────────────────────────────────────────────────────
+
+    @Override
+    public void onCreate(@Nullable Bundle savedInstanceState) {
+        super.onCreate(savedInstanceState);
+        EventBus.getDefault().register(this);
+    }
 
     @Override
     public View onCreateView(@NonNull LayoutInflater inflater, ViewGroup container,
@@ -63,147 +92,177 @@ public class ClockDateFragment extends Fragment {
         super.onViewCreated(view, savedInstanceState);
         RecyclerView rv = (RecyclerView) view;
 
-        // ── Position ─────────────────────────────────────────────────────────
-        positionAdapter = new ListWidgetAdapter(List.of(
-                new ListWidgetAdapter.ListItem(
-                        getString(R.string.clock_position_title),
-                        positionLabel(),
-                        this::showPositionDialog)));
+        // ── Status bar icon color ────────────────────────────────────────────
+        sbiItems.clear();
+        int     sbiColor = ObsidianPrefs.getInt(PREF_PREFIX + SBI_OVERLAY, 0xFFFFFFFF);
+        boolean sbiOn    = ObsidianPrefs.getBoolean(PREF_PREFIX + SBI_OVERLAY + "_on", false);
+        sbiItems.add(new DarkShadowItem(
+                getString(R.string.section_statusbar_icon_color),
+                SBI_OVERLAY,
+                Collections.emptyList(),
+                Collections.emptyList(),
+                null,
+                sbiColor, sbiOn
+        ));
+        sbiAdapter = new DarkShadowColorListener(
+                sbiItems, this::onSbiEnabled, this::onSbiDisabled, this::onSbiSwatch);
 
-        // ── Font size ─────────────────────────────────────────────────────────
-        sizeAdapter = new ListWidgetAdapter(List.of(
-                new ListWidgetAdapter.ListItem(
-                        getString(R.string.clock_size_title),
-                        sizeLabel(),
-                        this::showSizeDialog)));
-
-        // ── Extra padding ─────────────────────────────────────────────────────
-        paddingAdapter = new ListWidgetAdapter(List.of(
-                new ListWidgetAdapter.ListItem(
-                        getString(R.string.clock_padding_title),
-                        paddingLabel(),
-                        this::showPaddingDialog)));
+        // ── Custom clock color ────────────────────────────────────────────────
+        clockColorItems.clear();
+        int     clockColor = ObsidianPrefs.getInt(PREF_CLOCK_COLOR, Color.WHITE);
+        boolean clockOn    = ObsidianPrefs.getBoolean(PREF_CLOCK_COLOR_ON, false);
+        clockColorItems.add(new DarkShadowItem(
+                getString(R.string.clock_color_title),
+                "CLOCK_COLOR",
+                Collections.emptyList(),
+                Collections.emptyList(),
+                null,
+                clockColor, clockOn
+        ));
+        clockColorAdapter = new DarkShadowColorListener(
+                clockColorItems, this::onClockColorEnabled, this::onClockColorDisabled, this::onClockColorSwatch);
 
         buildRecyclerView(rv);
     }
 
     /** Assemble the ConcatAdapter. */
     private void buildRecyclerView(RecyclerView rv) {
-        NavAdapter oraDataNav = new NavAdapter(List.of(
+        NavAdapter styleNav = new NavAdapter(List.of(
+                new NavAdapter.NavItem(
+                        R.drawable.ic_clock,
+                        getString(R.string.nav_clock_style),
+                        getString(R.string.nav_clock_style_summary),
+                        () -> navigate(new ClockStyleFragment(), getString(R.string.nav_clock_style))),
                 new NavAdapter.NavItem(
                         R.drawable.ic_clock,
                         getString(R.string.nav_clock_date),
                         getString(R.string.nav_clock_date_summary),
-                        () -> {
-                            if (getActivity() instanceof MainActivity) {
-                                ((MainActivity) getActivity()).navigateTo(
-                                        new ClockOraDataFragment(),
-                                        getString(R.string.nav_clock_date));
-                            }
-                        })
+                        () -> navigate(new ClockOraDataFragment(), getString(R.string.nav_clock_date)))
         ));
 
         rv.setAdapter(new ConcatAdapter(
                 new SectionTitleAdapter(List.of(getString(R.string.section_clock_date))),
-                positionAdapter,
-                sizeAdapter,
-                paddingAdapter,
-                oraDataNav
+                styleNav,
+                new SectionTitleAdapter(List.of(getString(R.string.section_statusbar_icon_color))),
+                sbiAdapter,
+                new SectionTitleAdapter(List.of(getString(R.string.clock_color_title))),
+                clockColorAdapter
         ));
     }
 
-    // ── Position dialog ───────────────────────────────────────────────────────
-
-    private void showPositionDialog() {
-        String[] entries = requireContext().getResources().getStringArray(R.array.clock_position_entries);
-        String[] values  = requireContext().getResources().getStringArray(R.array.clock_position_values);
-        String   cur     = ObsidianPrefs.getString(PREF_POSITION, "2");
-        int curIdx = indexOf(values, cur, 0);
-
-        final int[] sel = {curIdx};
-        new MaterialAlertDialogBuilder(requireContext())
-                .setTitle(R.string.clock_position_title)
-                .setSingleChoiceItems(entries, curIdx, (d, w) -> sel[0] = w)
-                .setPositiveButton(R.string.apply, (d, w) -> {
-                    ObsidianPrefs.putString(PREF_POSITION, values[sel[0]]);
-                    positionAdapter.getItems().get(0).valueSummary = entries[sel[0]];
-                    positionAdapter.notifyItemChanged(0);
-                })
-                .setNegativeButton(R.string.cancel, null)
-                .show();
+    private void navigate(Fragment fragment, String title) {
+        if (getActivity() instanceof MainActivity) {
+            ((MainActivity) getActivity()).navigateTo(fragment, title);
+        }
     }
 
-    // ── Size dialog ───────────────────────────────────────────────────────────
+    // ── Status bar icon color callbacks ───────────────────────────────────────
 
-    private void showSizeDialog() {
-        String[] entries = requireContext().getResources().getStringArray(R.array.clock_size_entries);
-        int[]    values  = requireContext().getResources().getIntArray(R.array.clock_size_values);
-        int      cur     = ObsidianPrefs.getInt(PREF_SIZE, 12);
-        int curIdx = indexOfInt(values, cur, 0);
-
-        final int[] sel = {curIdx};
-        new MaterialAlertDialogBuilder(requireContext())
-                .setTitle(R.string.clock_size_title)
-                .setSingleChoiceItems(entries, curIdx, (d, w) -> sel[0] = w)
-                .setPositiveButton(R.string.apply, (d, w) -> {
-                    ObsidianPrefs.putInt(PREF_SIZE, values[sel[0]]);
-                    sizeAdapter.getItems().get(0).valueSummary = entries[sel[0]];
-                    sizeAdapter.notifyItemChanged(0);
-                })
-                .setNegativeButton(R.string.cancel, null)
-                .show();
+    private void onSbiEnabled(DarkShadowItem item) {
+        item.setEnabled(true);
+        DarkShadowUtils.saveColor(item);
+        Context ctx = requireContext().getApplicationContext();
+        new Thread(() -> applySbiColors(item.getColor(), ctx)).start();
     }
 
-    // ── Padding dialog ────────────────────────────────────────────────────────
-
-    private void showPaddingDialog() {
-        String[] entries = requireContext().getResources().getStringArray(R.array.clock_padding_entries);
-        int[]    values  = requireContext().getResources().getIntArray(R.array.clock_padding_values);
-        int      cur     = ObsidianPrefs.getInt(PREF_PADDING, 0);
-        int curIdx = indexOfInt(values, cur, 0);
-
-        final int[] sel = {curIdx};
-        new MaterialAlertDialogBuilder(requireContext())
-                .setTitle(R.string.clock_padding_title)
-                .setSingleChoiceItems(entries, curIdx, (d, w) -> sel[0] = w)
-                .setPositiveButton(R.string.apply, (d, w) -> {
-                    ObsidianPrefs.putInt(PREF_PADDING, values[sel[0]]);
-                    paddingAdapter.getItems().get(0).valueSummary = entries[sel[0]];
-                    paddingAdapter.notifyItemChanged(0);
-                })
-                .setNegativeButton(R.string.cancel, null)
-                .show();
+    private void onSbiDisabled(DarkShadowItem item) {
+        item.setEnabled(false);
+        ObsidianPrefs.putBoolean(PREF_PREFIX + SBI_OVERLAY + "_on", false);
+        Context ctx = requireContext().getApplicationContext();
+        new Thread(() -> disableSbiColors(ctx)).start();
     }
 
-    // ── Summary label helpers ─────────────────────────────────────────────────
-
-    private String positionLabel() {
-        String[] entries = requireContext().getResources().getStringArray(R.array.clock_position_entries);
-        String[] values  = requireContext().getResources().getStringArray(R.array.clock_position_values);
-        return entries[indexOf(values, ObsidianPrefs.getString(PREF_POSITION, "2"), 0)];
+    private void onSbiSwatch(DarkShadowItem item, int dialogId) {
+        mPendingDialogId = dialogId;
+        mPendingIsClock  = false;
+        if (getActivity() instanceof MainActivity) {
+            ((MainActivity) getActivity()).showColorPickerDialog(
+                    dialogId, item.getColor(), true, true, true);
+        }
     }
 
-    private String sizeLabel() {
-        String[] entries = requireContext().getResources().getStringArray(R.array.clock_size_entries);
-        int[]    values  = requireContext().getResources().getIntArray(R.array.clock_size_values);
-        return entries[indexOfInt(values, ObsidianPrefs.getInt(PREF_SIZE, 12), 0)];
+    // ── Clock color callbacks ─────────────────────────────────────────────────
+
+    private void onClockColorEnabled(DarkShadowItem item) {
+        item.setEnabled(true);
+        ObsidianPrefs.putBoolean(PREF_CLOCK_COLOR_ON, true);
+        ObsidianPrefs.putInt(PREF_CLOCK_COLOR, item.getColor());
     }
 
-    private String paddingLabel() {
-        String[] entries = requireContext().getResources().getStringArray(R.array.clock_padding_entries);
-        int[]    values  = requireContext().getResources().getIntArray(R.array.clock_padding_values);
-        return entries[indexOfInt(values, ObsidianPrefs.getInt(PREF_PADDING, 0), 0)];
+    private void onClockColorDisabled(DarkShadowItem item) {
+        item.setEnabled(false);
+        ObsidianPrefs.putBoolean(PREF_CLOCK_COLOR_ON, false);
     }
 
-    // ── Utilities ─────────────────────────────────────────────────────────────
-
-    private static int indexOf(String[] arr, String val, int def) {
-        for (int i = 0; i < arr.length; i++) if (arr[i].equals(val)) return i;
-        return def;
+    private void onClockColorSwatch(DarkShadowItem item, int dialogId) {
+        mPendingDialogId = dialogId;
+        mPendingIsClock  = true;
+        if (getActivity() instanceof MainActivity) {
+            ((MainActivity) getActivity()).showColorPickerDialog(
+                    dialogId, item.getColor(), true, true, true);
+        }
     }
 
-    private static int indexOfInt(int[] arr, int val, int def) {
-        for (int i = 0; i < arr.length; i++) if (arr[i] == val) return i;
-        return def;
+    // ── Color picker result ───────────────────────────────────────────────────
+
+    @Subscribe(threadMode = ThreadMode.MAIN)
+    public void onColorSelected(ColorSelectedEvent event) {
+        if (event.dialogId() != mPendingDialogId) return;
+        mPendingDialogId = -1;
+
+        if (mPendingIsClock) {
+            mPendingIsClock = false;
+            DarkShadowItem item = clockColorItems.get(0);
+            item.setColor(event.color());
+            ObsidianPrefs.putInt(PREF_CLOCK_COLOR, event.color());
+            if (clockColorAdapter != null) clockColorAdapter.notifyDataSetChanged();
+        } else {
+            DarkShadowItem item = sbiItems.get(0);
+            item.setColor(event.color());
+            ObsidianPrefs.putInt(DarkShadowUtils.PREF_PREFIX + item.getOverlayName(), event.color());
+            if (sbiAdapter != null) sbiAdapter.notifyDataSetChanged();
+            Context ctx = requireContext().getApplicationContext();
+            new Thread(() -> applySbiColors(event.color(), ctx)).start();
+        }
+    }
+
+    private void applySbiColors(int color, Context ctx) {
+        String hex    = fmt(color);
+        String transp = "0x00000000";
+        String ripple = fmt(0x80000000 | (color & 0x00FFFFFF));
+        String sui    = Constants.SYSTEM_UI;
+        FabricatedUtil.buildAndEnableOverlays(
+            new Object[]{sui, "SBI_8",  "color", "batterymeter_charge_color",                     hex},
+            new Object[]{sui, "SBI_9",  "color", "batterymeter_bolt_color",                       hex},
+            new Object[]{sui, "SBI_10", "color", "light_mode_icon_color_single_tone",             hex},
+            new Object[]{sui, "SBI_11", "color", "light_mode_icon_color_dual_tone_background",    transp},
+            new Object[]{sui, "SBI_12", "color", "light_mode_icon_color_dual_tone_fill",          hex},
+            new Object[]{sui, "SBI_13", "color", "light_mode_qs_icon_color_single_tone",          hex},
+            new Object[]{sui, "SBI_14", "color", "dark_mode_icon_color_single_tone",              hex},
+            new Object[]{sui, "SBI_15", "color", "dark_mode_icon_color_dual_tone_background",     transp},
+            new Object[]{sui, "SBI_16", "color", "dark_mode_icon_color_dual_tone_fill",           hex},
+            new Object[]{sui, "SBI_17", "color", "dark_mode_qs_icon_color_dual_tone_background",  transp},
+            new Object[]{sui, "SBI_18", "color", "dark_mode_qs_icon_color_single_tone",           hex},
+            new Object[]{sui, "SBI_19", "color", "dark_mode_qs_icon_color_dual_tone_fill",        hex},
+            new Object[]{sui, "SBI_20", "color", "status_bar_clock_color",                        hex},
+            new Object[]{sui, "SBI_21", "color", "bright_foreground_disabled_material_dark",      ripple},
+            new Object[]{sui, "SBI_22", "color", "stat_sys_airplane_icon_color",                  hex}
+        );
+        AppUtils.showRestartReminder(ctx);
+    }
+
+    private void disableSbiColors(Context ctx) {
+        FabricatedUtil.disableOverlays(SBI_NAMES);
+        AppUtils.showRestartReminder(ctx);
+    }
+
+    private static String fmt(int color) {
+        return String.format("0x%08X", 0xFFFFFFFFL & color);
+    }
+
+    @Override
+    public void onDestroy() {
+        super.onDestroy();
+        EventBus.getDefault().unregister(this);
     }
 }
